# contextual-dendritic-gating

./: .gitignore  LICENSE  README.md  environment.yml  plots_style.txt  pyproject.toml  requirements-dev.txt  requirements-figures.txt  requirements.txt  setup.py
results/: README.md
results/datasets/: README.md
results/figures/: README.md
results/matlab/: README.md
results/matlab/Fig_3/: README.md
results/matlab/Fig_4/: README.md
results/matlab/Fig_5/: README.md
results/matlab/Fig_6/: README.md
results/matlab/Fig_S2/: README.md
results/matlab/Fig_S4/: README.md
results/matlab/Fig_S5/: README.md
results/sim_files/: README.md
scripts/: Fig_2.py  Fig_3.py  Fig_4.py  Fig_5.py  Fig_6.py  Fig_7.py  Fig_8.py  Fig_S1.py  Fig_S2.py  Fig_S3.py  Fig_S6.py
scripts/figures/: paper_figure_2.py  paper_figure_3.py  paper_figure_4.py  paper_figure_5.py  paper_figure_6.py  paper_figure_7.py  paper_figure_sup_2.py
scripts/matlab/: README.md
scripts/matlab/plot/: Fig_3CD_conn_matrix.m  Fig_4E_plots.m  Fig_5BC_conn_matrix_and_graph.m  Fig_6B_graph.m  Fig_S2D_conn_matrix.m  Fig_S4_all_plots.m  Fig_S5_all_plots.m
scripts/matlab/simulate/: Fig_S4_simulation.m  (+2 more)
src/: README.md  area.py  get_activity_metrics.py  handle_parameters_and_results.py  network_ff_inhibition.py  network_multiple_contexts_multiple_assemblies.py  network_multiple_contexts_over_time_with_association.py  network_recall.py  network_single_imprint.py  network_task.py  projection_probability.py  single_neuron.py  utils.py
src/model_specs/: equations.txt  equations_rest.txt  parameters.txt
(+1 files in other folders)
