[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310"]
extend-exclude = "^(build|results|src\\.egg-info)/"

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["build", "results", "src.egg-info"]

[tool.ruff.lint]
select = ["F401", "F841"]
